# Aerogel

./: CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-x86.yml  build-x86_64.yml  release.yml
arch/x86/: CMakeLists.txt  kernel.ld
arch/x86/boot/: Makefile  a20.asm  mbr.asm  stage2.asm
arch/x86/cpu/: entry.asm  gdt.asm  gdt.c  gdt.h  idt.c  idt.h  isr.asm  isr.c  isr.h  switch.asm
arch/x86_64/: CMakeLists.txt  kernel.ld
arch/x86_64/boot/: Makefile  boot.ld  bootx64.efi  efi.h  efi_main.c
arch/x86_64/cpu/: entry.asm  gdt.asm  gdt.c  gdt.h  idt.c  idt.h  isr.asm  isr.c  isr.h  switch.asm
arch/x86_64/mm/: vmm.c  vmm.h
docs/: architecture.md  bootloader.md  contributing.md  drivers.md  kernel.md  roadmap.md
drivers/: CMakeLists.txt
drivers/bus/: pci.c  pci.h
drivers/display/: framebuffer.c  framebuffer.h  vga_text.c  vga_text.h
drivers/input/: ps2_keyboard.c  ps2_keyboard.h  ps2_mouse.c  ps2_mouse.h
drivers/net/: rtl8139.c  rtl8139.h
drivers/serial/: serial.c  serial.h
drivers/storage/: ata.c  ata.h
drivers/timer/: pit.c  pit.h
drivers/usb/: bluetooth.c  bluetooth.h  xhci.c  xhci.h
kernel/: CMakeLists.txt  canary.c  kmain.c  panic.c  panic.h
kernel/fs/: fat32.c  fat32.h  tmpfs.c  tmpfs.h  vfs.c  vfs.h
kernel/gui/: gui.c  gui.h
kernel/include/: canary.h  errno.h  io.h  kernel.h  types.h
kernel/mm/: heap.c  heap.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/net/: net.c  net.h
kernel/sched/: sched.c  sched.h  thread.c  thread.h
libs/libc/: CMakeLists.txt
libs/libc/include/: stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libs/libc/src/: printf.c  stdlib.c  string.c
libs/libk/: CMakeLists.txt  kprintf.c  kprintf.h  spinlock.c  spinlock.h
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/aerogel-core/: Cargo.toml
rust/crates/aerogel-core/src/: lib.rs
rust/crates/aerogel-core/src/net/: arp.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  udp.rs
rust/targets/: aerogel-x86.json  aerogel-x86_64.json
tools/cmake/: toolchain-x86.cmake  toolchain-x86_64.cmake
tools/scripts/: build-iso.sh  create-disk.py  run-qemu.sh
userspace/setup/: setup.c  setup.h
userspace/shell/: shell.c  shell.h
